--- a/map.html
+++ b/map.html
@@ -4,17 +4,39 @@
     <meta charset="utf-8">
     <title>지도 생성하기</title>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-<!-- 지도를 표시할 div 입니다 -->
-<div id="map" style="width:100vw;height:50vh;"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            <!-- 지도를 표시할 div 입니다 -->
+            <div id="map" style="width:55vw; height:50vh;"></div>
+            <div id="result"></div>
+        </div>
+        <div class="col-sm-4">
+            <div id="tabs">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#menuDiv" onclick="loadData('http://localhost:5555/w22_B1_2/korean.json')">한식</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#menuDiv" onclick="loadData('http://localhost:5555/w22_B1_2/japanese.json')">일식</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#menuDiv" onclick="loadData('http://localhost:5555/w22_B1_2/fastfood.json')">패스트푸드</a>
+                    </li>
+                </ul>
+                <ul class="storeList">
 
-<div id="result"></div>
-
-<div>
-    <button onclick="loadData('http://localhost:5555/w22_B1_2/korean.json')">한식</button>
-    <button onclick="loadData('http://localhost:5555/w22_B1_2/japanese.json')">일식</button>
-    <button onclick="loadData('http://localhost:5555/w22_B1_2/fastfood.json')">패스트푸드</button>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0657413c243ac86f1aac3e726ed35b9e"></script>
@@ -106,9 +128,7 @@
 
 </script>
 
-<ul class="storeList">
 
-</ul>
 
 <script>
     function loadData(serverInfo) {
