--- a/map.html
+++ b/map.html
@@ -9,8 +9,19 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
+
 </head>
 <body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<style>
+    .storeList {
+        margin: 10px;
+    }
+</style>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
@@ -22,16 +33,16 @@
             <div id="tabs">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#menuDiv" onclick="loadData('http://localhost:5555/w22_B1_2/korean.json')">한식</a>
+                        <a class="nav-link active" data-bs-toggle="tab" aria-current="page" href="#storeList" onclick="loadData('http://localhost:5555/w22_B1_2/korean.json')">한식</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#menuDiv" onclick="loadData('http://localhost:5555/w22_B1_2/japanese.json')">일식</a>
+                        <a class="nav-link" data-bs-toggle="tab" href="#storeList" onclick="loadData('http://localhost:5555/w22_B1_2/japanese.json')">일식</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#menuDiv" onclick="loadData('http://localhost:5555/w22_B1_2/fastfood.json')">패스트푸드</a>
+                        <a class="nav-link" data-bs-toggle="tab" href="#storeList" onclick="loadData('http://localhost:5555/w22_B1_2/fastfood.json')">패스트푸드</a>
                     </li>
                 </ul>
-                <ul class="storeList">
+                <ul class="storeList" >
 
                 </ul>
             </div>
